[tool.poetry]
name = "pulumi-utils"
version = "0.1.0"
description = ""
authors = ["Edmondo <edmondo.porcu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pulumi = "^2.9.2"
pulumi-gcp = "3.21.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.5.3"
pytest = "^6.0.1"
pytest-cov = "^2.10.1"
flake8 = "^3.8.3"
isort = "^5.4.2"
autopep8 = "^1.5.4"
pytest-cases = "^2.2.1"
pre-commit = "^2.7.1"
seed-isort-config = "^2.2.0"
rootpath = "^0.1.1"
pytest-icdiff = "^0.5"
mypy = "^0.790"
flake8-noqa = "^1.0.5"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
